# GIAIC_AgenticAI_Class_Assignments

01.Smart-Student-Agent/: main.py
02.Career-Mentor-Agent/: main.py  pyproject.toml
03.AI-Travel-Designer-Agent/: main.py  pyproject.toml
04.Game-Master-Agent/: main.py  pyproject.toml
Smart-Student-Agent/: .env  pyproject.toml
